# meet2jira

./: .env.local  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  Dockefile.test  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject 2.toml  pyproject.toml  pytest.ini
.github/workflows/: docker-image.yml
T-lite-it-1.0/: README.md
alembic/: env.py
alembic/versions/: 0275e89e75f8_init.py  082e2be7c949_initial_migration.py  38daa5c6e729_updated_user.py  4177fe2d2039_updated_user.py  6e57a7ccf0cb_init.py  92d8426fdb69_init.py  9bdfc86d4116_updated_user.py  b3a0d700e300_fixed_meeting_model.py
src/: database.py  main 2.py  main.py
src/admin/: admin.py  dashboards.py
src/debug/: debug_auth.py
src/dependencies/: auth.py
src/handlers/webhooks/: handle_file_ready_event.py  handle_file_upload.py  handle_file_upload_event.py
src/migrations/: env.py
src/migrations/versions/: 0a0a7ed754b8_initial_tables.py  1098ffdf950b_initial_tables.py  207796621d50_updated_meeting_model.py  49716def0e87_updated_meeting_model.py
src/models/: meeting.py  parsed_task.py  user.py
src/pipeline/: pipeline.py
src/pipeline/elements/: base.py
src/repositories/: auth.py  base.py  meeting.py
src/routers/: auth.py  file_processing 2.py  file_processing.py  meeting.py  utils.py
src/schemas/auth/: login.py  user.py
src/schemas/debug/: utils_schemas.py
src/schemas/jira/: jira_schemas.py  request_schemas.py
src/schemas/llm/: llm_service_schemas.py
src/schemas/main/: root_schemas.py
src/schemas/model/: meeting.py
src/schemas/processing/: processing_schemas.py
src/scripts/: create_superuser.py  llm.py
src/services/: auth_service.py  jira_service.py  llm_service.py  meeting_service.py
src/settings/: config.py
src/static/: index.html
src/static/css/: feedback.css  index.css
src/static/js/: feedback.js  index.js  meeting.js
src/tests/: conftest.py
src/tests/test_api_jira/: test_connection_to_jira.py
src/tests/test_src/: conftest.py
src/tests/test_src/endpoints/: test_file_processing.py
src/tests/test_src/webhook/: test_webhook.py
src/tests/webhook/: test_webhook.py
src/tests/webhooks/: test_requirements.txt  test_webhook_with_base64.py
src/tools/: document_classify.py  prompt_generator.py
src/utils/: file_utils.py
src/utils/files/audio/: get_audio_duration.py  process_audio_chunck.py  split_audio_chunks.py
src/utils/files/text/: extract_text_from_file.py
src/utils/jira/: parse_single_task.py  parse_tasks_from_text.py
