[project]
name = "meet2jira"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "docx>=0.2.4",
    "fastadmin>=0.2.22",
    "fastapi>=0.116.0",
    "greenlet>=3.2.3",
    "jinja2>=3.1.6",
    "jira>=3.8.0",
    "openai>=1.97.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf>=5.8.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0",
    "isort>=5.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "standard-aifc>=3.13.0",
]
